tests/dataset/tpc-ds/compiler/pl/q40.error
run: exit status 2
ERROR: /tmp/q40.pl:58: user:main Type error: `integer' expected, found `refunded' (an atom)
